--- a/Understanding_Dielectron_Resonances_Fourth_Example_user11.ipynb
+++ b/Understanding_Dielectron_Resonances_Fourth_Example_user11.ipynb
@@ -7,7 +7,7 @@
     "<img src=\"http://files.oproject.org/img/HeaderOpenData.png\">\n",
     "\n",
     "# CMS Open Data Example #4: Di-Electron Resonances\n",
-    "<img src=\"http://files.oproject.org/img/Zee.jps\"></img> <BR>\n",
+    "<img src=\"http://files.oproject.org/img/Zee.jpg\"></img> <BR>\n",
     "## Import Modules and Turn on Javascript"
    ]
   },
